finalise nav, grid articles

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
     </div>
 
     <div class="container-fluid">
+      <br>
+      <h1 class="header">header text here</h1>
+      <hr>
       <div class="grid" id="anchor">
 
       </div>
