--- a/test.html
+++ b/test.html
@@ -17,39 +17,15 @@
 	</head>
 
 	<body>
-		<nav class="navbar fixed-top navbar-inverse">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand media" href="/index.html"></a>
-						<img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
-					</a>
-					<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
-				<div class="collapse navbar-collapse" id="navbar">
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="/index.html">Home</a></li>
-						<li><a href="#">Works</a></li>
-						<li><a href="#">About</a></li>
-						<li><a href="#">Contact</a></li>
-						<li><a href="#">Misc</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
 
 		<div class="container-fluid">
 
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
-				<article class="unity"><a href="posts/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">7/7/2018</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div id="vignette"><span>snow - </span><span class="date">10/10</span><hr><a href="posts/unity.html"><h4>unity</h4></a></div></section></a></article>
+				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 			</div>
 		</div>
 	</body>
