--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
 
     <div class="container-fluid">
       <br>
-      <h1 class="header">header text here</h1>
+      <h1 class="header">header text here.</h1>
       <hr>
       <div class="grid" id="anchor">
-
+        <div class="grid-sizer"></div>
+        <article></article>
       </div>
     </div>
   </div>
