--- a/test.html
+++ b/test.html
@@ -20,6 +20,12 @@
 
 		<div class="container-fluid">
 
+			<div class="button-group filters-button-group">
+				<button class="button" data-filter="*">All</button>
+				<button class="button" data-filter=".unity">unity</button>
+				<button class="button" data-filter=".processing">processing</button>
+				<button class="button" data-filter=".misc">misc</button>
+			</div>
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
