--- a/test.html
+++ b/test.html
@@ -31,10 +31,10 @@
 					<span class="fas fa-times"></span>
 				</button>
 				<button class="button" data-filter=".unity">
-					<img src="img/unityblack.png">
+					<img src="img/unitywhite.png">
 				</button>
 				<button class="button" data-filter=".processing">
-					<img src="img/processingblack.png">
+					<img src="img/processingwhite.png">
 				</button>
 				<button class="button" data-filter=".misc">
 					<span class="fas fa-ellipsis-v"></span>
