--- a/test.html
+++ b/test.html
@@ -27,18 +27,18 @@
 
 			<div class="button-group filters-button-group">
 				<button class="button" data-filter="*">
-					<span class="fas fa-home"></span>
-					<span class="fas fa-times"></span>
+					<span class="fas fa-home btn-icon"></span>
+					<span class="fas fa-times btn-icon"></span>
 				</button>
 				<button class="button" data-filter=".unity">
-					<img src="img/unitywhite.png">
+					<img class="btn-icon" src="img/unitywhite.png">
 				</button>
 				<button class="button" data-filter=".processing">
-					<img src="img/processingwhite.png">
+					<img class="btn-icon" src="img/processingwhite.png">
 				</button>
 				<button class="button" data-filter=".misc">
-					<span class="fas fa-ellipsis-v"></span>
-					<span class="fas fa-ellipsis-h"></span>
+					<span class="fas fa-ellipsis-v btn-icon"></span>
+					<span class="fas fa-ellipsis-h btn-icon"></span>
 				</button>
 			</div>
 			<div class="grid" id="anchor">
