--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@
 		<div class="container-fluid">
 
 			<div class="button-group filters-button-group">
-				<button class="button" data-filter="*">
+				<button class="button is-checked" data-filter="*">
 					<span class="fas fa-home btn-icon"></span>
 					<span class="fas fa-times btn-icon"></span>
 				</button>
