--- a/test.html
+++ b/test.html
@@ -43,12 +43,12 @@
 			</div>
 			<div class="grid" id="anchor">
 				<div class="grid-sizer"></div>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
+				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
