--- a/template.html
+++ b/template.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <title>$title - sk99</title>
-  <link rel="icon" href="img/sk.png">
+  <link rel="icon" href="/img/sk.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <base href="inferrinizzard.github.io/">  
-
+  <base href="inferrinizzard.github.io">  
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
@@ -14,14 +14,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet/less" href="style.less">
+  <link rel="stylesheet/less" href="/style.less">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
-  <script src="include.js"></script>
-  <script src="sidebar.js"></script>
+  <script src="/include.js"></script>
+  <script src="/sidebar.js"></script>
 </head>
 
 <body>
-<div include-html="nav.html"></div>
+<div include-html="/nav.html"></div>
 
 <div class="main">
   <div class="container-fluid">
@@ -49,7 +49,7 @@
   </div>
 </div>
 
-<div include-html="footer.html"></div>
+<div include-html="/footer.html"></div>
 </body>
 
 <script>includeHTML();</script>
