--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
 <div include-html="/nav.html"></div>
 
 <div class="main">
-  <div class="container-fluid">
+  <div class="container-fluid row">
     <div class="col-xs-12 col-md-8">
       <br>
       <h1 id="title">$title - $date</h1>
