--- a/test.html
+++ b/test.html
@@ -64,6 +64,120 @@
 				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 			</div>
+
+			<ul class="list-inline">
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="0">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/1">
+						<br>
+						Caption
+					</a>
+				</li>
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="1">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/2">
+						<br>
+						Caption
+					</a>
+				</li>
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="2">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/3">
+						<br>
+						Caption
+					</a>
+				</li>
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="3">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/4">
+						<br>
+						Caption
+					</a>
+				</li>
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="4">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/5">
+						<br>
+						Caption
+					</a>
+				</li>
+				<li data-toggle="modal" data-target="#myModal">
+					<a href="#myGallery" data-slide-to="5">
+						<img class="img-thumbnail" src="https://placeimg.com/200/133/nature/6">
+						<br>
+						Caption
+					</a>
+				</li>
+			</ul>
+
+			<div class="modal fade" id="myModal">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<div class="pull-left">
+							My Gallery Title
+							</div>
+							<button type="button" class="close" data-dismiss="modal" title="Close"> <span class="glyphicon glyphicon-remove"></span></button>
+						</div>
+						<div class="modal-body">
+					
+							<div id="myGallery" class="carousel slide" data-interval="false">
+								<div class="carousel-inner">
+									<div class="item active"> <img src="https://placeimg.com/600/400/nature/1" alt="item0">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 0  description.</p>
+										</div>
+									</div>
+									<div class="item"> <img src="https://placeimg.com/600/400/nature/2" alt="item1">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 1 description.</p>
+										</div>
+									</div>
+									<div class="item"> <img src="https://placeimg.com/600/400/nature/3" alt="item2">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 2  description.</p>
+										</div>
+									</div>
+									<div class="item"> <img src="https://placeimg.com/600/400/nature/4" alt="item3">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 3 description.</p>
+										</div>
+									</div>
+									<div class="item"> <img src="https://placeimg.com/600/400/nature/5" alt="item4">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 4 description.</p>
+										</div>
+									</div>
+									<div class="item"> <img src="https://placeimg.com/600/400/nature/6" alt="item5">
+										<div class="carousel-caption">
+											<h3>Heading 3</h3>
+											<p>Slide 5 description.</p>
+										</div>
+									</div>
+								</div>
+								<a class="left carousel-control" href="#myGallery" role="button" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#myGallery" role="button" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span></a>
+							</div>
+						
+						</div>
+						<div class="modal-footer">
+							<div class="pull-left">
+								<small>
+									Photographs by 
+									<a href="https://placeimg.com" target="new">
+										placeimg.com
+									</a>
+								</small>
+							</div>
+							<button class="btn-sm close" type="button" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 	</body>
