--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
     <br>
     <h1 class="header">header text here.</h1>
     <hr>
+    <div class="button-group filters-button-group">
+      <button class="button is-checked" data-filter="*">
+        <span class="fas fa-home btn-icon"></span>
+        <span class="fas fa-times btn-icon"></span>
+      </button>
+      <button class="button" data-filter=".unity">
+        <img class="btn-icon" src="img/unitywhite.png">
+      </button>
+      <button class="button" data-filter=".processing">
+        <img class="btn-icon" src="img/processingwhite.png">
+      </button>
+      <button class="button" data-filter=".misc">
+        <span class="fas fa-ellipsis-v btn-icon"></span>
+        <span class="fas fa-ellipsis-h btn-icon"></span>
+      </button>
+    </div>
     <div class="grid" id="anchor">
       <div class="grid-sizer"></div>
       <article></article>
