--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 		<link rel="icon" href="img/sk.png">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<base href="inferrinizzard.github.io">
+		<!-- <base href="inferrinizzard.github.io"> -->
 
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -48,21 +48,6 @@
 				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 			</div>
 
 			<ul class="list-inline">
