--- a/test.html
+++ b/test.html
@@ -57,7 +57,21 @@
 			</button>
 
 			<a data-toggle="modal" data-target="#imgModal">
-				<img src="/img/snow.png">
+				<section>
+					<div id="modalLink" class="carousel slide" data-ride="carousel" data->
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="/img/mountains.png" alt="First slide" data-slide-to="0">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="/img/snow.png" alt="Second slide" data-slide-to="1">
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="/img/red.png" alt="Third slide" data-slide-to="2">
+							</div>
+						</div>
+					</div>
+				</section>
 			</a>
 			
 			<div class="modal fade" id="imgModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -70,7 +84,39 @@
 							</button>
 						</div>
 						<div class="modal-body">
-							...
+							<div id="highlights" class="carousel slide" data-ride="carousel">
+								<ol class="carousel-indicators">
+									<li data-target="#highlights" data-slide-to="0"></li>
+									<li data-target="#highlights" data-slide-to="1" class="active"></li>
+									<li data-target="#highlights" data-slide-to="2"></li>
+								</ol>
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img class="d-block w-100" src="img/mountains.png" alt="First slide">
+										<div class="carousel-caption">
+											<h1>big succ</h1>
+											<br>
+											<button type="button" class="btn btn-default">button boi</button>
+										</div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="img/snow.png" alt="Second slide">
+										<div class="carousel-caption"></div>
+									</div>
+									<div class="carousel-item">
+										<img class="d-block w-100" src="img/red.png" alt="Third slide">
+										<div class="carousel-caption"></div>
+									</div>
+								</div>
+								<a class="carousel-control-prev" href="#highlights" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#highlights" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -82,7 +128,5 @@
 		</div>
 	</div>
 	</body>
-
-	
 
 </html>
