--- a/template.html
+++ b/template.html
@@ -33,6 +33,7 @@
         <iframe class ="embed-responsive-item" src="$video" frameborder="0" encrypted-media ="allowfullscreen"></iframe>
       </div>
       <br>
+      $image
       <h3>$body</h3>
       <br>
       <p class="count" id="$type">#$count</p>
