font fix, sidebar fixed

--- a/newpost.html
+++ b/newpost.html
@@ -22,7 +22,7 @@
 <div include-html="nav.html"></div>
 
 <div class="main">
-	<div class="container-fluid">
+	<div class="container-fluid row">
 		<div class="col-xs-12 col-md-8">
 			<br>
 			<h1>New Post:</h1>
