--- a/template.html
+++ b/template.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet/less" href="/style.less">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
   <script src="/include.js"></script>
-  <script src="/sidebar.js"></script>
+  <script src="/post.js"></script>
 </head>
 
 <body>
