--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
 			
 		<link rel="stylesheet/less" type="text/css" href="style.less">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.5.0-beta.2/less.min.js" ></script>
+		<link rel="stylesheet" href="test.css">
 
 		<script src="isotope.js" async></script>
 		<script src="imagesLoaded.js" async></script>
@@ -52,69 +53,39 @@
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 			</div>
 
-			<a data-toggle="modal" data-target="#imgModal">
-				<section>
-					<div id="modalLink" class="carousel slide" data-ride="carousel" data->
-						<div class="carousel-inner">
-							<div class="carousel-item active">
-								<img class="d-block w-100" src="/img/mountains.png" alt="First slide" data-slide-to="0">
+			<div class="row">
+				<div class="col-lg-12">
+					<div id="carousel-custom" class="carousel slide" data-ride="carousel">
+					<!-- Wrapper for slides -->
+						<div class="carousel-inner" role="listbox">
+							<div class="item active">
+								<img src="http://placehold.it/1400x600&text=slide1" alt="..." class="img-responsive">
 							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="/img/snow.png" alt="Second slide" data-slide-to="1">
-							</div>
-							<div class="carousel-item">
-								<img class="d-block w-100" src="/img/red.png" alt="Third slide" data-slide-to="2">
+							<div class="item">
+								<img src="http://placehold.it/1400x600&text=slide2" alt="..." class="img-responsive">
 							</div>
 						</div>
-					</div>
-				</section>
-			</a>
-			
-			<div class="modal fade" id="imgModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<div id="highlights" class="carousel slide" data-ride="carousel">
-								<ol class="carousel-indicators">
-									<li data-target="#highlights" data-slide-to="0"></li>
-									<li data-target="#highlights" data-slide-to="1" class="active"></li>
-									<li data-target="#highlights" data-slide-to="2"></li>
-								</ol>
-								<div class="carousel-inner">
-									<div class="carousel-item active">
-										<img class="d-block w-100" src="img/mountains.png" alt="First slide">
-										<div class="carousel-caption">
-										</div>
-									</div>
-									<div class="carousel-item">
-										<img class="d-block w-100" src="img/snow.png" alt="Second slide">
-										<div class="carousel-caption"></div>
-									</div>
-									<div class="carousel-item">
-										<img class="d-block w-100" src="img/red.png" alt="Third slide">
-										<div class="carousel-caption"></div>
-									</div>
-								</div>
-								<a class="carousel-control-prev" href="#highlights" role="button" data-slide="prev">
-									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="carousel-control-next" href="#highlights" role="button" data-slide="next">
-									<span class="carousel-control-next-icon" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-							<button type="button" class="btn btn-primary">Save changes</button>
-						</div>
+					
+						<!-- Controls -->
+						<a class="left carousel-control" href="#carousel-custom" role="button" data-slide="prev">
+							<i class="fa fa-chevron-left"></i>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#carousel-custom" role="button" data-slide="next">
+							<i class="fa fa-chevron-right"></i>
+							<span class="sr-only">Next</span>
+						</a>
+					
+							<!-- Indicators -->
+						<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
+							<li data-target="#carousel-custom" data-slide-to="0" class="active">
+								<img src="http://placehold.it/100x50&text=slide1" alt="..." class="img-responsive">
+							</li>
+							<li data-target="#carousel-custom" data-slide-to="1">
+								<img src="http://placehold.it/100x50&text=slide2" alt="..." class="img-responsive">
+							</li>
+	
+						</ol> 
 					</div>
 				</div>
 			</div>
