--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
       <li data-target="#highlights" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item">
         <img class="d-block w-100" src="img/mountains.png" alt="First slide">
+        <div class="carousel-caption">
+        </div>
+      </div>
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="img/snow.png" alt="Second slide">
         <div class="carousel-caption">
           <h1>big succ</h1>
           <br>
           <button type="button" class="btn btn-default">button boi</button>
         </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="img/snow.png" alt="Second slide">
-        <div class="carousel-caption"></div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="img/red.png" alt="Third slide">
