--- a/test.html
+++ b/test.html
@@ -54,17 +54,18 @@
 			</div>
 
 			<div id="highlights" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators visible-sm-block hidden-xs-block visible-md-block visible-lg-block">
-					<li data-target="#carousel-custom" data-slide-to="0" class="active">
-						<img src="img/snow.png" alt="..." class="img-responsive">
-					</li>
-					<li data-target="#carousel-custom" data-slide-to="1">
-						<img src="img/red.png" alt="..." class="img-responsive">
-					</li>
-				
+				<ol class="carousel-indicators">
+					<li data-target="#highlights" data-slide-to="0"></li>
+					<li data-target="#highlights" data-slide-to="1" class="active"></li>
+					<li data-target="#highlights" data-slide-to="2"></li>
 				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
+						<img class="d-block w-100" src="img/mountains.png" alt="First slide">
+						<div class="carousel-caption">
+						</div>
+					</div>
+					<div class="carousel-item">
 						<img class="d-block w-100" src="img/snow.png" alt="Second slide">
 						<div class="carousel-caption"></div>
 					</div>
@@ -82,7 +83,6 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-		</div>
 	</div>
 	</body>
 
