--- a/index.html
+++ b/index.html
@@ -29,9 +29,15 @@
 <div class="main">
   <div id="highlights" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#highlights" data-slide-to="0"></li>
-      <li data-target="#highlights" data-slide-to="1" class="active"></li>
-      <li data-target="#highlights" data-slide-to="2"></li>
+      <li data-target="#highlights" data-slide-to="0">
+        <img src="img/mountains.png" class="img-responsive">
+      </li>
+      <li data-target="#highlights" data-slide-to="1" class="active">
+        <img src="img/snow.png" class="img-responsive">
+      </li>
+      <li data-target="#highlights" data-slide-to="2">
+          <img src="img/red.png" class="img-responsive">
+      </li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item">
