--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,7 @@
       <br>
       <a href="#" class="fab fa-facebook"></a>
       <a href="#" class="fab fa-google"></a>
-      <a href="#" class="fab fa-github"></a>
+      <a href="https://github.com/inferrinizzard" class="fab fa-github"></a>
       <a href="#" class="fab fa-youtube"></a>
     </div>
     <div class="col-sm-4">
