--- a/test.html
+++ b/test.html
@@ -54,11 +54,6 @@
 			</div>
 
 			<div id="highlights" class="carousel slide" data-ride="carousel">
-				<ol class="carousel-indicators">
-					<li data-target="#highlights" data-slide-to="0"></li>
-					<li data-target="#highlights" data-slide-to="1" class="active"></li>
-					<li data-target="#highlights" data-slide-to="2"></li>
-				</ol>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img class="d-block w-100" src="img/mountains.png" alt="First slide">
@@ -82,6 +77,17 @@
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
+				<ol class="carousel-indicators">
+					<li data-target="#highlights" data-slide-to="0" class="active">
+						<img src="img/mountains.png" class="img-responsive">
+					</li>
+					<li data-target="#highlights" data-slide-to="1">
+						<img src="img/snow.png" class="img-responsive">
+					</li>
+					<li data-target="#highlights" data-slide-to="2">
+						<img src="img/red.png" class="img-responsive">
+					</li>
+				</ol>
 			</div>
 	</div>
 	</body>
