--- a/index.html
+++ b/index.html
@@ -28,19 +28,23 @@
 
 <div class="main">
   <div id="highlights" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#highlights" data-slide-to="0"></li>
+      <li data-target="#highlights" data-slide-to="1" class="active"></li>
+      <li data-target="#highlights" data-slide-to="2"></li>
+    </ol>
     <div class="carousel-inner">
       <div class="carousel-item">
         <img class="d-block w-100" src="img/mountains.png" alt="First slide">
-        <div class="carousel-caption">
-        </div>
-      </div>
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="img/snow.png" alt="Second slide">
         <div class="carousel-caption">
           <h1>big succ</h1>
           <br>
           <button type="button" class="btn btn-default">button boi</button>
         </div>
+      </div>
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="img/snow.png" alt="Second slide">
+        <div class="carousel-caption"></div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="img/red.png" alt="Third slide">
@@ -55,17 +59,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-    <ol class="carousel-indicators">
-        <li data-target="#highlights" data-slide-to="0">
-          <img src="img/mountains.png" class="img-responsive">
-        </li>
-        <li data-target="#highlights" data-slide-to="1" class="active">
-          <img src="img/snow.png" class="img-responsive">
-        </li>
-        <li data-target="#highlights" data-slide-to="2">
-            <img src="img/red.png" class="img-responsive">
-        </li>
-      </ol>
   </div>
 
   <div class="container-fluid">
