--- a/test.html
+++ b/test.html
@@ -53,7 +53,7 @@
 				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
 			</div>
 
-			<div id="highlights" class="carousel slide" data-ride="carousel">
+			<div id="imgCarousel" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img class="d-block w-100" src="img/mountains.png" alt="First slide">
@@ -69,22 +69,22 @@
 						<div class="carousel-caption"></div>
 					</div>
 				</div>
-				<a class="carousel-control-prev" href="#highlights" role="button" data-slide="prev">
+				<a class="carousel-control-prev" href="#imgCarousel" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 				</a>
-				<a class="carousel-control-next" href="#highlights" role="button" data-slide="next">
+				<a class="carousel-control-next" href="#imgCarousel" role="button" data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
 				<ol class="carousel-indicators">
-					<li data-target="#highlights" data-slide-to="0" class="active">
+					<li data-target="#imgCarousel" data-slide-to="0" class="active">
 						<img src="img/mountains.png" class="img-responsive">
 					</li>
-					<li data-target="#highlights" data-slide-to="1">
+					<li data-target="#imgCarousel" data-slide-to="1">
 						<img src="img/snow.png" class="img-responsive">
 					</li>
-					<li data-target="#highlights" data-slide-to="2">
+					<li data-target="#imgCarousel" data-slide-to="2">
 						<img src="img/red.png" class="img-responsive">
 					</li>
 				</ol>
