--- a/test.html
+++ b/test.html
@@ -27,6 +27,25 @@
 
 	<div class="main">
 		<div class="container-fluid">
+			<ul id="menu">
+				<li>
+					<input id="check01" type="checkbox" name="menu"/>
+					<label for="check01">Tasto menu 01</label>
+					<ul class="submenu">
+						<li><a href="#">Sotto menu 1</a></li>
+						<li><a href="#">Sotto menu 2</a></li>
+					</ul>
+				</li>
+				<li>
+					<input id="check02" type="checkbox" name="menu"/>
+					<label for="check02">Tasto menu 02</label>
+					<ul class="submenu">
+						<li><a href="#">Sotto menu 3 (long text)</a></li>
+						<li><a href="#">Sotto menu 4</a></li>
+						<li><a href="#">Sotto menu 5</a></li>
+					</ul>
+				</li>
+			</ul>
 
 			<div class="button-group filters-button-group">
 				<button class="button is-checked" data-filter="*">
