--- a/test.html
+++ b/test.html
@@ -27,25 +27,34 @@
 
 	<div class="main">
 		<div class="container-fluid">
-			<ul id="menu">
-				<li>
-					<input id="check01" type="checkbox" name="menu"/>
-					<label for="check01">Tasto menu 01</label>
-					<ul class="submenu">
-						<li><a href="#">Sotto menu 1</a></li>
-						<li><a href="#">Sotto menu 2</a></li>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+				<a class="navbar-brand" href="#">Expand at lg</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+	
+				<div class="navbar-collapse collapse show" id="navbarsExample05" style="">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item active">
+							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Link</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled" href="#">Disabled</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+							<div class="dropdown-menu" aria-labelledby="dropdown05">
+								<a class="dropdown-item" href="#">Action</a>
+								<a class="dropdown-item" href="#">Another action</a>
+								<a class="dropdown-item" href="#">Something else here</a>
+							</div>
+						</li>
 					</ul>
-				</li>
-				<li>
-					<input id="check02" type="checkbox" name="menu"/>
-					<label for="check02">Tasto menu 02</label>
-					<ul class="submenu">
-						<li><a href="#">Sotto menu 3 (long text)</a></li>
-						<li><a href="#">Sotto menu 4</a></li>
-						<li><a href="#">Sotto menu 5</a></li>
-					</ul>
-				</li>
-			</ul>
+				</div>
+			</nav>
 
 			<div class="button-group filters-button-group">
 				<button class="button is-checked" data-filter="*">
