--- a/test.html
+++ b/test.html
@@ -27,13 +27,13 @@
 
 	<div class="main">
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 				<a class="navbar-brand" href="#">Expand at lg</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 	
-				<div class="navbar-collapse collapse show" id="navbarsExample05" style="">
+				<div class="navbar-collapse collapse show" id="navbarsExample05">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active">
 							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -43,14 +43,6 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link disabled" href="#">Disabled</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-							<div class="dropdown-menu" aria-labelledby="dropdown05">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<a class="dropdown-item" href="#">Something else here</a>
-							</div>
 						</li>
 					</ul>
 				</div>
