--- a/nav.html
+++ b/nav.html
@@ -1,17 +1,27 @@
-<nav class="navbar navbar-expand-lg navbar-dark">
+<nav class="navbar navbar-expand-md navbar-dark">
   <a class="navbar-brand media" href="/index.html">
     <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
   </a>
-  <div class="dropdown">
-    <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      <span class="fas fa-bars"></span>
-    </button>
-    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-      <a class="dropdown-item" href="/index.html">Home</a>
-      <a class="dropdown-item" href="#">Works</a>
-      <a class="dropdown-item" href="#">About</a>
-      <a class="dropdown-item" href="#">Contact</a>
-      <a class="dropdown-item" href="#">Misc</a>
-    </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
+    <span class="fas fa-bars"></span>
+  </button>
+  <div class="navbar-collapse collapse show" id="navbarsExample05">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Misc</a>
+      </li>
+    </ul>
   </div>
 </nav>
