--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
     <span class="fas fa-bars"></span>
   </button>
-  <div class="navbar-collapse collapse show" id="navbarsExample05">
+  <div class="navbar-collapse collapse show" id="navMenu">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/index.html">Home</a>
