--- a/nav.html
+++ b/nav.html
@@ -2,10 +2,10 @@
   <a class="navbar-brand media" href="/index.html">
     <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
   </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
+  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
     <span class="fas fa-bars"></span>
   </button>
-  <div class="navbar-collapse collapse show" id="navMenu">
+  <div class="navbar-collapse collapse" id="navMenu">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="/index.html">Home</a>
