--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
   </button>
   <div class="navbar-collapse collapse" id="navMenu">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="/index.html">Home</a>
       </li>
       <li class="nav-item">
