--- a/nav.html
+++ b/nav.html
@@ -8,19 +8,19 @@
   <div class="navbar-collapse collapse" id="navMenu">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/index.html">Home</a>
+        <a href="/index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Works</a>
+        <a href="#">Works</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a href="#">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Misc</a>
+        <a href="#">Misc</a>
       </li>
     </ul>
   </div>
