--- a/nav.html
+++ b/nav.html
@@ -4,6 +4,7 @@
   </a>
   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navMenu" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
     <span class="fas fa-bars"></span>
+    <span class="fas fa-times"></span>
   </button>
   <div class="navbar-collapse collapse" id="navMenu">
     <ul class="navbar-nav ml-auto">
