pre carousel spawn

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <div class="container-fluid">
     <br>
-    <h1 class="header">header text here.</h1>
+    <h1 class="header">Recent Posts</h1>
     <hr>
     <div class="button-group filters-button-group">
       <button class="button is-checked" data-filter="*">
