--- a/template.html
+++ b/template.html
@@ -29,11 +29,7 @@
       <br>
       <h1 id="title">$title - $date</h1>
       <br>
-      <div class="flex-item video-content embed-responsive embed-responsive-16by9">
-        <iframe class ="embed-responsive-item" src="$video" frameborder="0" encrypted-media ="allowfullscreen"></iframe>
-      </div>
-      <br>
-      $image
+      $media
       <h3>$body</h3>
       <br>
       <p class="count" id="$type">#$count</p>
