--- a/newpost.html
+++ b/newpost.html
@@ -16,6 +16,20 @@
   <link rel="stylesheet/less" href="/style.less">
   <script src="js/less.min.js"></script>
 	<script src="include.js"></script>
+
+	<style>
+	.media{padding: 0 15px;}
+	.media span{font-size: 2em;}
+	.media #video{
+		transform: scale(2) translateY(-1px); 
+		vertical-align: middle;
+		margin-left: 15px;
+	}
+	.media #image{
+		text-align: right;
+		width: 50px;
+	}
+	</style>
 </head>
 
 <body>
@@ -23,17 +37,26 @@
 
 <div class="main">
 	<div class="container-fluid row">
-		<div class="col-xs-12 col-md-8">
+		<div class="col-xs-12 col-md-8 newpost">
 			<br>
 			<h1>New Post:</h1>
 			<hr>
 			<h1><input type="text" id="title" placeholder="Title"></input></h1>
 			<br>
-			<input type="text" id="video" placeholder="Video Embed URL"></input>
+			<div class="row media">
+				<span>
+					Video?	
+					<input type="checkbox" id="video">
+				</span>
+				<span class="ml-auto">
+					How many other Images?
+					<input type="number" id="image">
+				</span>
+			</div>
 			<br>
 			<h2><input type="text" id="category" placeholder="Category"></input></h2>
 			<br>
-			<h2><textarea id="body" cols="60" rows="10" placeholder="Text Body"></textarea></h2>
+			<h2><textarea id="body" cols="60" rows="10" placeholder="Text Body" style="max-width: 100%;"></textarea></h2>
 		</div>
 
 		<div class="col-md-4">
