--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@
 
 <div class="main">
   <div class="container-fluid row">
-    <div class="col-xs-12 col-md-8">
+    <div class="col-xs-12 col-md-8 content">
       <br>
       <h1 id="title">$title - $date</h1>
       <br>
