--- a/newpost.html
+++ b/newpost.html
@@ -15,7 +15,7 @@
   
   <link rel="stylesheet/less" href="/style.less">
   <script src="js/less.min.js"></script>
-	<script src="include.js"></script>
+	<script src="js/include.js"></script>
 
 	<style>
 	.media{padding: 0 15px;}
@@ -71,7 +71,7 @@
 
 	</div>
 
-	<script type="text/javascript" src="writeToFile.js"></script>
+	<script type="text/javascript" src="js/writeToFile.js"></script>
 </div>
 
 <div include-html="footer.html"></div>
