changed carousel title, double pend post img

--- a/newpost.html
+++ b/newpost.html
@@ -52,6 +52,7 @@
 					<input type="number" id="image">
 				</span>
 			</div>
+			<h2><input type="text" id="imgTitle" placeholder="Image Name"></input></h2>
 			<br>
 			<h2><input type="text" id="category" placeholder="Category"></input></h2>
 			<br>
