--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <br>
     <h1 class="header">Recent Posts</h1>
     <hr>
-    <div class="button-group filters-button-group">
+    <div class="button-group filters-button-group" id="button-group">
       <button class="button is-checked" data-filter="*">
         <span class="fas fa-home btn-icon"></span>
         <span class="fas fa-times btn-icon"></span>
