--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md">
   <a class="navbar-brand media" href="/index.html">
     <img src="/img/skbrand.png" id="logo" style="max-height: 60px;">
   </a>
