--- a/test.html
+++ b/test.html
@@ -11,104 +11,77 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 	
 		<script src="js/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="js/bootstrap.bundle.min.js"></script>
 		
 		<link rel="stylesheet/less" href="/style.less">
 		<script src="js/less.min.js"></script>
 		<link rel="stylesheet" href="test.css">
 
-		<script src="js/isotope.js" async></script>
-		<script src="js/imagesLoaded.js" async></script>
-		<script src="js/article.js" async></script>
+		<script src="js/flickity.js"></script>
+		<link rel="stylesheet" href="css/flickity.css">
+		<script src="test.js"></script>
+
+		<style>
+			
+		</style>
 	</head>
 
 	<body>
 
 	<div class="main">
 		<div class="container-fluid">
-			<nav class="navbar navbar-expand-md navbar-dark">
-				<a class="navbar-brand" href="#">Expand at lg</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-	
-				<div class="navbar-collapse collapse show" id="navbarsExample05">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Link</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Disabled</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			<h1>Flickity - keyhole parallax</h1>
 
-			<div class="button-group filters-button-group">
-				<button class="button is-checked" data-filter="*">
-					<span class="fas fa-home btn-icon"></span>
-					<span class="fas fa-times btn-icon"></span>
-				</button>
-				<button class="button" data-filter=".unity">
-					<img class="btn-icon" src="img/unitywhite.png">
-				</button>
-				<button class="button" data-filter=".processing">
-					<img class="btn-icon" src="img/processingwhite.png">
-				</button>
-				<button class="button" data-filter=".misc">
-					<span class="fas fa-ellipsis-v btn-icon"></span>
-					<span class="fas fa-ellipsis-h btn-icon"></span>
-				</button>
-			</div>
-			<div class="grid" id="anchor">
-				<div class="grid-sizer"></div>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item processing"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item misc"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity"><a href="posts/unity/snow.html"><img src="/img/snow.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-				<article class="grid-item unity misc"><a href="posts/unity/snow.html"><img src="/img/skbrand.png"><section><div class="vignette"><span>snow - </span><span class="date">10/10</span><hr><h4>unity</h4></div></section></a></article>
-			</div>
-
-			<div id="imgCarousel" class="carousel slide" data-ride="carousel">
-				<div class="carousel-inner">
-					<div class="carousel-item active">
-						<img class="d-block w-100" src="img/mountains.png" alt="First slide">
-						<div class="carousel-caption">
-						</div>
+			<section class="carousel">
+				<div class="carousel-main">
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
 					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="img/snow.png" alt="Second slide">
-						<div class="carousel-caption"></div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
 					</div>
-					<div class="carousel-item">
-						<img class="d-block w-100" src="img/red.png" alt="Third slide">
-						<div class="carousel-caption"></div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
 					</div>
 				</div>
-				<a class="carousel-control-prev" href="#imgCarousel" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="carousel-control-next" href="#imgCarousel" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-				<ol class="carousel-indicators">
-					<li data-target="#imgCarousel" data-slide-to="0" class="active">
-						<img src="img/mountains.png" class="img-responsive">
-					</li>
-					<li data-target="#imgCarousel" data-slide-to="1">
-						<img src="img/snow.png" class="img-responsive">
-					</li>
-					<li data-target="#imgCarousel" data-slide-to="2">
-						<img src="img/red.png" class="img-responsive">
-					</li>
-				</ol>
-			</div>
+
+				<div class="carousel-nav">
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/orange-tree.jpg" alt="orange tree" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/one-world-trade.jpg" alt="One World Trade" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/drizzle.jpg" alt="drizzle" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/cat-nose.jpg" alt="cat nose" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/contrail.jpg" alt="contrail" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/golden-hour.jpg" alt="golden hour" />
+					</div>
+					<div class="carousel-cell">
+						<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/82/flight-formation.jpg" alt="flight formation" />
+					</div>
+				</div>
+			</section>
+
 		</div>
 	</div>
 	</body>
