--- a/resume/resume.html
+++ b/resume/resume.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Sean Song's Resume</title>
+		<link rel="icon" href="/img/sk.png">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
@@ -35,7 +36,8 @@
 				<h3>Technical Skills</h3>
 				<div>&#x2B29 Concrete knowledge of object-oriented languages (C#, Java, Python, C/C++)</div>
 				<div>&#x2B29 Well-versed in front-end web development languages (HTML, CSS, javaScript/jQuery)</div>
-				<div>&#x2B29 Proficient with many 3D modeling software (3DSMax, Maya, Blender)</div>
+				<div>&#x2B29 Proficient with Unity and development pipeline</div>
+				<div>&#x2B29 Adept with many 3D modeling software (3DSMax, Maya, Blender)</div>
 				<div>&#x2B29 Experienced with design in CAD software (AutoCAD, Inventor, Fusion360)</div>
 				<div>&#x2B29 Familiar with visual design software (Illustrator, Photoshop)</div>
 			</div>
@@ -68,7 +70,7 @@
 				</div>
 				<div>&#x2B29 Attending online courses for additional transfer credit</div>
 				<div class="subheader">
-					<span><b>University of California, Santa Cruz, Santa Cruz</b></span>
+					<span><b>University of California, Santa Cruz</b></span>
 					<span><b>September 2018 - Current</b></span>
 				</div>
 				<div>&#x2B29 Majoring in Computer Game Design with a minor in Computer Science</div>
@@ -104,8 +106,10 @@
 			</div>
 			<div class="reference">
 				<h3>References</h3>
-				<div>&#x2B29 Patricia Camacho, Employer</div>
+				<div style="display: inline-block;">&#x2B29 Patricia Camacho, Employer</div>
+				<span style="float: right; color: #666;">(310) 951-5260</span>
 			</div>
+			<div class="bar"></div>
 		</div>
 
 	</body>
