test footer include

--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
-<footer class="container-fluid text-center">
-  <div class="row">
+<!-- <footer class="container-fluid text-center"> -->
+  <div class="row footer-wrapper">
     <div class="col-sm-4">
       <h3>Contact</h3>
       <br>
@@ -19,4 +19,4 @@
       <img src="/img/bunny.png" class="icon">
     </div>
   </div>
-</footer>
+<!-- </footer> -->
