--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet/less" href="/style.less">
   <script src="js/less.min.js"></script>
 
-	<script src="js/index.js"></script>
+	<!-- <script src="js/index.js"></script> -->
   <script src="js/include.js"></script>
   <script src="js/isotope.js" async></script>
   <script src="js/imagesLoaded.js" async></script>
