--- a/resume/resume.html
+++ b/resume/resume.html
@@ -74,6 +74,7 @@
 					<span><b>September 2018 - Current</b></span>
 				</div>
 				<div>&#x2B29 Majoring in Computer Game Design with a minor in Computer Science</div>
+				<div>&#x2B29 Planning to graduation by June 2020</div>
 			</div>
 			<div class="volunteer">
 				<h3>Social Work</h3>
