--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet/less" href="/style.less">
 		<script src="js/less.min.js"></script>
 		<link rel="stylesheet" href="test.css">
+  	<script src="js/include.js"></script>
 
 		<script src="js/flickity.js"></script>
 		<link rel="stylesheet" href="css/flickity.css">
@@ -36,26 +37,7 @@
 		</div>
 	</div>
 	<footer>
-		<div class="row footer-wrapper">
-			<div class="col-sm-4">
-				<h3>Contact</h3>
-				<br>
-				<h4>Email: email here</h4>
-			</div>
-			<div class="col-sm-4">
-				<h3>Socials</h3>
-				<br>
-				<a href="#" class="fab fa-facebook"></a>
-				<a href="#" class="fab fa-google"></a>
-				<a href="https://github.com/inferrinizzard" class="fab fa-github"></a>
-				<a href="#" class="fab fa-youtube"></a>
-			</div>
-			<div class="col-sm-4">
-				<h3>Bun</h3>
-				<br>
-				<img src="/img/bunny.png" class="icon">
-			</div>
-		</div>
+		<div include-html="footer.html"></div>
 	</footer>
 	</body>
 
