fixed footer, working carousel, wip about page

--- a/footer.html
+++ b/footer.html
@@ -2,12 +2,12 @@
   <div class="row footer-wrapper">
     <div class="col-sm-4">
       <h3>Contact</h3>
-      <br>
-      <h4>Email: email here</h4>
+			<h4>Email:</h4>
+			<h4>sean.song7426@gmail.com</h4>
+			<h4>ssong28@ucsc.edu</h4>
     </div>
     <div class="col-sm-4">
       <h3>Socials</h3>
-      <br>
       <a href="#" class="fab fa-facebook"></a>
       <a href="#" class="fab fa-google"></a>
       <a href="https://github.com/inferrinizzard" class="fab fa-github"></a>
@@ -15,7 +15,6 @@
     </div>
     <div class="col-sm-4">
       <h3>Bun</h3>
-      <br>
       <img src="/img/bunny.png" class="icon">
     </div>
   </div>
