--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 </div>
 
-<div include-html="footer.html"></div>
+<footer include-html="footer.html"></footer>
 </body>
 
 <script>includeHTML();</script>
