--- a/nav.html
+++ b/nav.html
@@ -15,7 +15,7 @@
         <a href="#">Works</a>
       </li>
       <li class="nav-item">
-        <a href="#">About</a>
+        <a href="/about.html">About</a>
       </li>
       <li class="nav-item">
         <a href="#">Contact</a>
