--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 	<link rel="icon" href="img/sk.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <base href="inferrinizzard.github.io"> -->
+	<base href="inferrinizzard.github.io">  
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -15,31 +15,19 @@
 	
 	<link rel="stylesheet/less" href="/style.less">
 	<script src="js/less.min.js"></script>
-	<link rel="stylesheet" href="test.css">
-	<script src="js/include.js"></script>
 
-	<script src="js/flickity.js"></script>
-	<link rel="stylesheet" href="css/flickity.css">
-	<script src="test.js"></script>
-
-	<style>
-		
-	</style>
+  <script src="js/include.js"></script>
 </head>
-
 <body>
+	<div include-html="nav.html" class="pos-f-t"></div>
 
-<div class="main">
-	<div class="container-fluid">
-		<div style="height: 2000px;">
-			Element with some height so that the page can scroll.
-		</div>
-	</div>
-</div>
-<footer include-html="footer.html"></footer>
+	<h1>About</h1>
+
+	<a href="resume/resume.html">Resume</a>
+
+	<footer include-html="footer.html"></footer>
 </body>
+
 <script>includeHTML();</script>
 
 </html>
-
- 
