resume mobile fix

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -39,7 +39,7 @@
 				<div>&#x2B29 Proficient with Unity and development pipeline</div>
 				<div>&#x2B29 Adept with many 3D modeling software (3DSMax, Maya, Blender)</div>
 				<div>&#x2B29 Experienced with design in CAD software (AutoCAD, Inventor, Fusion360)</div>
-				<div>&#x2B29 Familiar with visual design software (Illustrator, Photoshop)</div>
+				<div>&#x2B29 Familiar with visual design software (Illustrator, Photoshop, Asesprite)</div>
 			</div>
 			<div class="experience">
 				<h3>Experience</h3>
@@ -74,7 +74,7 @@
 					<span><b>September 2018 - Current</b></span>
 				</div>
 				<div>&#x2B29 Majoring in Computer Game Design with a minor in Computer Science</div>
-				<div>&#x2B29 Planning to graduation by June 2020</div>
+				<div>&#x2B29 Planning to graduate by June 2020</div>
 			</div>
 			<div class="volunteer">
 				<h3>Social Work</h3>
