added research to resume

--- a/resume/resume.html
+++ b/resume/resume.html
@@ -93,6 +93,23 @@
 				<div>&#x2B29 Non-profit team that competes in the FIRST Tech Challenge, allowing students of all ages to learn STEM through robotic design and competition.</div>
 				<div>&#x2B29 Placed highly at both Regional and Sectional levels, participated at World Championship in Houston.</div>
 			</div>
+			<div class="research">
+				<h3>Research</h3>
+				<div class="subheader">
+					<span><b>Cymatics Visualisation, UCSC</b></span>
+					<span><i> - 3D Modeler / Programmer</i></span>
+					<span><b>September 2018 - Present</b></span>
+				</div>
+				<div>&#x2B29 Worked under Richard Grillotti for his DANM MFA Master's Thesis</div>
+				<div>&#x2B29 Helped to design and program VR projections of sound-based artforms</div>
+				<div class="subheader">
+					<span><b>The Disaster Trail, UCSC</b></span>
+					<span><i> - Unity Programmer</i></span>
+					<span><b>September 2018 - Present</b></span>
+				</div>
+				<div>&#x2B29 Worked with Edward Melcer (PhD, Computer Science) to create a game for Motivf and FEMA</div>
+				<div>&#x2B29 Programmed a minigame-based adventure game to raise awareness regarding disaster preparedness</div>
+			</div>
 			<div class="skill">
 				<h3>Additional Skills</h3>
 				<div>&#x2B29 Fluent in Chinese (Mandarin and Hangzhou dialect) and French, proficient in Japanese</div>
