--- a/resume/resume.html
+++ b/resume/resume.html
@@ -66,9 +66,14 @@
 				<div>&#x2B29 Attended to study Multivariable Calculus for transfer credit</div>
 				<div class="subheader">
 					<span><b>Gavilan College, Gilroy</b></span>
-					<span><b>August 2018 - Current</b></span>
+					<span><b>August 2018 - December 2018</b></span>
 				</div>
-				<div>&#x2B29 Attending online courses for additional transfer credit</div>
+				<div>&#x2B29 Concurrently enrolled for additional transfer credit</div>
+				<div class="subheader">
+					<span><b>Palomar College, San Marcos</b></span>
+					<span><b>January 2019 - June 2019</b></span>
+				</div>
+				<div>&#x2B29 Concurrently enrolled in online courses for transfer credit</div>
 				<div class="subheader">
 					<span><b>University of California, Santa Cruz</b></span>
 					<span><b>September 2018 - Current</b></span>
@@ -103,8 +108,8 @@
 				<div>&#x2B29 Worked under Richard Grillotti for his DANM MFA Master's Thesis</div>
 				<div>&#x2B29 Helped to design and program VR projections of sound-based artforms</div>
 				<div class="subheader">
-					<span><b>The Disaster Trail, UCSC</b></span>
-					<span><i> - Unity Programmer</i></span>
+					<span><b>The Disaster Trail, DA-Games</b></span>
+					<span><i> - Unity Programmer / 3D Game Artist</i></span>
 					<span><b>September 2018 - Present</b></span>
 				</div>
 				<div>&#x2B29 Worked with Edward Melcer (PhD, Computer Science) to create a game for Motivf and FEMA</div>
