--- a/resume/resume.html
+++ b/resume/resume.html
@@ -76,10 +76,10 @@
 				<div>&#x2B29 Concurrently enrolled in online courses for transfer credit</div>
 				<div class="subheader">
 					<span><b>University of California, Santa Cruz</b></span>
-					<span><b>September 2018 - Current</b></span>
+					<span><b>September 2018 - June 2020</b></span>
 				</div>
 				<div>&#x2B29 Majoring in Computer Game Design with a minor in Computer Science</div>
-				<div>&#x2B29 Planning to graduate by June 2020</div>
+				<div>&#x2B29 Recent Coursework: Linear Algebra, Discrete Mathematics, Advanced Programming and Algorithms</div>
 			</div>
 			<div class="volunteer">
 				<h3>Social Work</h3>
@@ -103,17 +103,19 @@
 				<div class="subheader">
 					<span><b>Cymatics Visualisation, UCSC</b></span>
 					<span><i> - 3D Modeler / Programmer</i></span>
-					<span><b>September 2018 - Present</b></span>
+					<span><b>September 2018 - December 2018</b></span>
 				</div>
 				<div>&#x2B29 Worked under Richard Grillotti for his DANM MFA Master's Thesis</div>
 				<div>&#x2B29 Helped to design and program VR projections of sound-based artforms</div>
+				<div>&#x2B29 Specialized in creating procedurally generated 3D models of cymatic waveforms</div>
 				<div class="subheader">
 					<span><b>The Disaster Trail, DA-Games</b></span>
 					<span><i> - Unity Programmer / 3D Game Artist</i></span>
 					<span><b>September 2018 - Present</b></span>
 				</div>
 				<div>&#x2B29 Worked with Edward Melcer (PhD, Computer Science) to create a game for Motivf and FEMA</div>
-				<div>&#x2B29 Programmed a minigame-based adventure game to raise awareness regarding disaster preparedness</div>
+				<div>&#x2B29 Collaboration with Kyle SooHoo (BS, Computer Game Design) as part of his team's Senior Thesis</div>
+				<div>&#x2B29 Helped to program, design and model for a minigame-based adventure game to raise awareness regarding disaster preparedness</div>
 			</div>
 			<div class="skill">
 				<h3>Additional Skills</h3>
